--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,14 @@ jobs:
     steps:
       - checkout
       - run: npm i
-      - run: npm lint
+      - run: npm run lint
 
   test:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - run: npm i
-      - run: npm test
+      - run: npm run test
   analyze:
     docker:
       - image: circleci/node:13.8.0
