--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,14 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
+      - checkout
       - run: npm i
       - run: npm run test
   analyze:
     docker:
       - image: circleci/node:13.8.0
     steps:
+      - checkout
       - run: npm audit
          
 
